--- a/control-projects-frontend/src/app/views/config-view/list-catalog-view/list-catalog-view.component.html
+++ b/control-projects-frontend/src/app/views/config-view/list-catalog-view/list-catalog-view.component.html
@@ -1,1 +1,5 @@
-<p>list-catalog-view works!</p>
+<window-template>
+    <div class="list-catalog" content>
+        <p>list-catalog-view works!</p>
+    </div>
+  </window-template>
