--- a/control-projects-frontend/src/app/views/config-view/create-catalog-view/create-catalog-view.component.html
+++ b/control-projects-frontend/src/app/views/config-view/create-catalog-view/create-catalog-view.component.html
@@ -1,4 +1,4 @@
-<window-template>
+<window-template title="algo">
   <div class="create-catalog" content>
     <p>create-catalog-view works!</p>
   </div>
