--- a/control-projects-frontend/src/app/components/window/window.component.scss
+++ b/control-projects-frontend/src/app/components/window/window.component.scss
@@ -1,5 +1,7 @@
+.windows {
+  margin: 5px 10px;
+}
 .outer {
-  background: #b4b4b4;
   opacity: 0.9;
   width: 100%;
   margin: auto auto;
@@ -7,34 +9,8 @@
   border-radius: 7px 7px 0px 0px;
 
   &.yosemite {
-    background: #f6f6f6; /* Old browsers */
-    background: -moz-linear-gradient(
-      top,
-      #f6f6f6 0%,
-      #dadada 100%
-    ); /* FF3.6+ */
-    background: -webkit-gradient(
-      linear,
-      left top,
-      left bottom,
-      color-stop(0%, #f6f6f6),
-      color-stop(100%, #dadada)
-    ); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(
-      top,
-      #f6f6f6 0%,
-      #dadada 100%
-    ); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(
-      top,
-      #f6f6f6 0%,
-      #dadada 100%
-    ); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #f6f6f6 0%, #dadada 100%); /* IE10+ */
-    background: linear-gradient(to bottom, #f6f6f6 0%, #dadada 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', endColorstr='#dadada',GradientType=0 ); /* IE6-9 */
-    border: 1px solid #d8d8d8;
-    border-bottom: 1px solid #b4b4b4;
+    background: var(--surface-ground);
+    border: 1px solid var(--surface-border);
   }
 }
 
@@ -62,8 +38,9 @@
   }
 }
 
-.content{
-    height: 89vh;
-    margin-top: -16px;
-    background-color: whitesmoke;
+.content {
+  height: 89vh;
+  margin-top: -16px;
+  padding: 20px 200px;
+  background-color: var(--surface-section);
 }
