--- a/control-projects-frontend/src/styles.scss
+++ b/control-projects-frontend/src/styles.scss
@@ -6,4 +6,6 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  font-family: var(--font-family);
 }
+
