--- a/control-projects-frontend/src/app/views/config-view/create-catalog-view/create-catalog-view.component.html
+++ b/control-projects-frontend/src/app/views/config-view/create-catalog-view/create-catalog-view.component.html
@@ -1,5 +1,8 @@
-<window-template title="algo">
+<window-template [title]="title" [showActions]="true">
   <div class="create-catalog" content>
-    <p>create-catalog-view works!</p>
+    <input-text-form
+      label="Nombre del área de interes"
+      hint="Ingresa por favor el nombre del área de interes"
+    ></input-text-form>
   </div>
 </window-template>
