--- a/control-projects-frontend/src/app/views/config-view/create-catalog-view/create-catalog-view.component.html
+++ b/control-projects-frontend/src/app/views/config-view/create-catalog-view/create-catalog-view.component.html
@@ -1,4 +1,10 @@
-<window-template [title]="title" [showActions]="true" [customFormGroup]="viewFormGroup" [validateForm]="true" (actionPrimaryEvent)="saveEvent($event)">
+<window-template
+  [title]="title"
+  [showActions]="true"
+  [customFormGroup]="viewFormGroup"
+  [validateForm]="true"
+  (actionPrimaryEvent)="saveEvent($event)"
+>
   <div class="create-catalog" content>
     <div [formGroup]="viewFormGroup">
       <input-text-form
@@ -6,7 +12,10 @@
         hint="Ingresa por favor el nombre del área de interes"
         [customFormGroup]="viewFormGroup"
         [isRequired]="true"
+        [pattern]="GENERAL_CONSTANTS.REGEX_TEXT_LATAM"
+        [maxLength]="GENERAL_CONSTANTS.MAX_LENGTH_NAME"
+        [minLength]="GENERAL_CONSTANTS.MIN_LENGTH_NAME"
       ></input-text-form>
-    </div>    
+    </div>
   </div>
 </window-template>
