feature: create first endpioint backend

--- a/control-projects-frontend/src/app/components/input-text-form/input-text-form.component.html
+++ b/control-projects-frontend/src/app/components/input-text-form/input-text-form.component.html
@@ -16,6 +16,8 @@
         [attr.aria-describedby]="id + '-help'"
         formControlName="{{ id }}"
         [required]="isRequired"
+        [ngModel]="model"
+        (ngModelChange)="modelHasBeenChanged($event)"
         pInputText
       />
       <ng-container
