--- a/control-projects-frontend/src/app/views/config-view/create-catalog-view/create-catalog-view.component.html
+++ b/control-projects-frontend/src/app/views/config-view/create-catalog-view/create-catalog-view.component.html
@@ -15,6 +15,7 @@
         [pattern]="GENERAL_CONSTANTS.REGEX_TEXT_LATAM"
         [maxLength]="GENERAL_CONSTANTS.MAX_LENGTH_NAME"
         [minLength]="GENERAL_CONSTANTS.MIN_LENGTH_NAME"
+        [(model)]="areaNombre"
       ></input-text-form>
     </div>
   </div>
