feature: add spinenr http request

--- a/control-projects-frontend/src/app/app.component.html
+++ b/control-projects-frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-navbar></app-navbar>
 <custom-confirm-dialog></custom-confirm-dialog>
+<custom-spinner></custom-spinner>
 <router-outlet></router-outlet>
