feature: add first table

--- a/control-projects-frontend/src/app/views/config-view/create-catalog-view/create-catalog-view.component.html
+++ b/control-projects-frontend/src/app/views/config-view/create-catalog-view/create-catalog-view.component.html
@@ -8,8 +8,8 @@
   <div class="create-catalog" content>
     <div [formGroup]="viewFormGroup">
       <input-text-form
-        label="Nombre del área de interes"
-        hint="Ingresa por favor el nombre del área de interes"
+        label="Nombre del área de interés"
+        hint="Ingresa por favor el nombre del área de interés"
         [customFormGroup]="viewFormGroup"
         [isRequired]="true"
         [pattern]="GENERAL_CONSTANTS.REGEX_TEXT_LATAM"
