--- a/control-projects-frontend/src/app/views/config-view/list-catalog-view/list-catalog-view.component.html
+++ b/control-projects-frontend/src/app/views/config-view/list-catalog-view/list-catalog-view.component.html
@@ -1,5 +1,10 @@
 <window-template>
-    <div class="list-catalog" content>
-        <p>list-catalog-view works!</p>
-    </div>
-  </window-template>
+  <div class="list-catalog" content>
+    <custom-table
+      [service]="areaInteresManager"
+      method="findAllAreaInteres"
+      [configuration]="configTable"
+    >
+    </custom-table>
+  </div>
+</window-template>
