--- a/control-projects-frontend/src/app/views/config-view/list-catalog-view/list-catalog-view.component.html
+++ b/control-projects-frontend/src/app/views/config-view/list-catalog-view/list-catalog-view.component.html
@@ -2,8 +2,10 @@
   <div class="list-catalog" content>
     <custom-table
       [service]="areaInteresManager"
-      method="findAllAreaInteres"
+      methodGetData="findAllAreaInteres"
+      methodDelete="deleteAreaInteres"
       [configuration]="configTable"
+      (editEvent)="editAreaInteres($event)"
     >
     </custom-table>
   </div>
