feature: add module sede

--- a/control-projects-frontend/src/app/components/input-text-form/input-text-form.component.scss
+++ b/control-projects-frontend/src/app/components/input-text-form/input-text-form.component.scss
@@ -1,12 +1,15 @@
-.field {
-  height: 77px;
-  width: 364px;
-  left: 0px;
-  top: 0px;
-  .input {
-    width: 100%;
-  }
-  .required {
-    color: var(--primary-color);
+.input-text {
+  margin-bottom: 3.5rem;
+  .field {
+    height: 77px;
+    width: 364px;
+    left: 0px;
+    top: 0px;
+    .input {
+      width: 100%;
+    }
+    .required {
+      color: var(--primary-color);
+    }
   }
 }
