--- a/control-projects-frontend/src/app/views/config-view/list-sede-view/list-sede-view.component.html
+++ b/control-projects-frontend/src/app/views/config-view/list-sede-view/list-sede-view.component.html
@@ -1,1 +1,13 @@
-<p>list-sede-view works!</p>
+<window-template>
+    <div class="list-catalog" content>
+      <custom-table
+        [service]="sedeManagerService"
+        methodGetData="findAllSedes"
+        methodDelete="deleteSede"
+        [configuration]="configTable"
+        (editEvent)="editSede($event)"
+      >
+      </custom-table>
+    </div>
+  </window-template>
+  
