--- a/control-projects-frontend/src/app/views/config-view/create-sede-view/create-sede-view.component.html
+++ b/control-projects-frontend/src/app/views/config-view/create-sede-view/create-sede-view.component.html
@@ -13,7 +13,7 @@
         [customFormGroup]="viewFormGroup"
         [isRequired]="true"
         [pattern]="GENERAL_CONSTANTS.REGEX_TEXT_LATAM"
-        [maxLength]="GENERAL_CONSTANTS.MAX_LENGTH_NAME"
+        [maxLength]="10"
         [minLength]="GENERAL_CONSTANTS.MIN_LENGTH_NAME"
         [(model)]="codigoSede"
       ></input-text-form>
@@ -26,6 +26,16 @@
         [maxLength]="GENERAL_CONSTANTS.MAX_LENGTH_NAME"
         [minLength]="GENERAL_CONSTANTS.MIN_LENGTH_NAME"
         [(model)]="nombreSede"
+      ></input-text-form>
+      <input-text-form
+        label="Dirección de la sede"
+        hint="Ingresa por favor la dirección donde se ubica la sede"
+        [customFormGroup]="viewFormGroup"
+        [isRequired]="true"
+        [pattern]="GENERAL_CONSTANTS.REGEX_ADDRESS_LATAM"
+        [maxLength]="30"
+        [minLength]="GENERAL_CONSTANTS.MIN_LENGTH_NAME"
+        [(model)]="direccionSede"
       ></input-text-form>
     </div>
   </div>
