--- a/control-projects-frontend/src/app/components/custom-dropdown/custom-dropdown.component.scss
+++ b/control-projects-frontend/src/app/components/custom-dropdown/custom-dropdown.component.scss
@@ -1,7 +1,7 @@
 .custom-dropdown {
-  margin-bottom: 3.5rem;
+  margin-bottom: 25px;
   .field {
-    height: 77px;
+    height: fit-content;
     width: 364px;
     left: 0px;
     top: 0px;
