--- a/control-projects-frontend/src/app/components/input-text-form/input-text-form.component.scss
+++ b/control-projects-frontend/src/app/components/input-text-form/input-text-form.component.scss
@@ -1,7 +1,9 @@
 .input-text {
-  margin-bottom: 3.5rem;
+  &.margin-bottom {
+    margin-bottom: 25px;
+  }
   .field {
-    height: 77px;
+    height: fit-content;
     width: 364px;
     left: 0px;
     top: 0px;
@@ -10,6 +12,9 @@
     }
     .required {
       color: var(--primary-color);
+    }
+    .rigth-icon {
+      z-index: 5;
     }
   }
 }
