--- a/control-projects-frontend/src/app/views/faculty-view/create-faculty-view/create-faculty-view.component.html
+++ b/control-projects-frontend/src/app/views/faculty-view/create-faculty-view/create-faculty-view.component.html
@@ -27,6 +27,7 @@
         [isRequired]="true"
         [model]="faculty.sede"
         (modelChange)="faculty.sede = $event"
+        [customFormGroup]="viewFormGroup"
       >
       </custom-dropdown>
       <custom-dropdown
@@ -37,9 +38,22 @@
         hint="Selecciona el Decano actual que dirige la facultad"
         placeholder="Decano"
         [isRequired]="true"
+        [customFormGroup]="viewFormGroup"
       >
       </custom-dropdown>
-      <custom-multiple-input-text></custom-multiple-input-text>
+      <custom-multiple-input-text
+      [labelButton]="'Añadir teléfono'"
+      [labelInput]="'Teléfono(s) de la facultad'"
+      [maxItems]="2"
+      [isRequired]="true"
+      [hint]="'Ingresa un numero de teléfono ej: 601 792 2126 ó 6017922126 x5678'"
+      [customFormGroup]="viewFormGroup"
+      [model]="phones"
+      [pattern]="GENERAL_CONSTANTS.REGEX_PHONE_NUMBER"
+      [maxLength]="GENERAL_CONSTANTS.MAX_LENGTH_PHONE"
+      [minLength]="GENERAL_CONSTANTS.MIN_LENGTH_PHONE"
+      (modelChange)="setPhones($event)"
+      ></custom-multiple-input-text>
     </div>
   </div>
 </window-template>
