fix: entitys and data.sql

--- a/control-projects-frontend/src/app/components/custom-dropdown/custom-dropdown.component.html
+++ b/control-projects-frontend/src/app/components/custom-dropdown/custom-dropdown.component.html
@@ -23,8 +23,7 @@
         (onLazyLoad)="loadData($event)"
         [virtualScrollOptions]="{
           showLoader: true,
-          loading: loading,
-          delay: 250
+          loading: loading
         }"
       >
         <ng-template pTemplate="loader" let-options="options">
