--- a/control-projects-frontend/src/app/views/faculty-view/create-faculty-view/create-faculty-view.component.html
+++ b/control-projects-frontend/src/app/views/faculty-view/create-faculty-view/create-faculty-view.component.html
@@ -31,9 +31,9 @@
       >
       </custom-dropdown>
       <custom-dropdown
-        [service]="sedeManager"
-        methodGetData="findAllSedes"
-        [keysToShow]="['codigo', 'nombre']"
+        [service]="professorManager"
+        methodGetData="findAllProfessor"
+        [keysToShow]="['cedulaProfesor', 'nombreProfesor']"
         label="Selecciona el Decano"
         hint="Selecciona el Decano actual que dirige la facultad"
         placeholder="Decano"
