--- a/control-projects-frontend/src/app/views/faculty-view/create-faculty-view/create-faculty-view.component.html
+++ b/control-projects-frontend/src/app/views/faculty-view/create-faculty-view/create-faculty-view.component.html
@@ -41,6 +41,7 @@
         [customFormGroup]="viewFormGroup"
       >
       </custom-dropdown>
+      <!-- 
       <custom-multiple-input-text
       [labelButton]="'Añadir teléfono'"
       [labelInput]="'Teléfono(s) de la facultad'"
@@ -53,7 +54,7 @@
       [maxLength]="GENERAL_CONSTANTS.MAX_LENGTH_PHONE"
       [minLength]="GENERAL_CONSTANTS.MIN_LENGTH_PHONE"
       (modelChange)="setPhones($event)"
-      ></custom-multiple-input-text>
+      ></custom-multiple-input-text> -->
     </div>
   </div>
 </window-template>
