--- a/control-projects-frontend/src/app/views/investigation-group-view/create-investigation-group-view/create-investigation-group-view.component.html
+++ b/control-projects-frontend/src/app/views/investigation-group-view/create-investigation-group-view/create-investigation-group-view.component.html
@@ -1,6 +1,14 @@
 <window-template [title]="title" [showActions]="true" [validateForm]="true">
     <div class="create-catalog" content>
         <div>
+
+            <input-text-form 
+            label="Codigo del grupo de investigación: " 
+            hint="Ingresa por favor el nombre del profesor"
+            [isRequired]="true"
+            type="number"
+                ></input-text-form>
+
             <input-text-form 
             label="Nombre del grupo de investigación: " 
             hint="Ingresa por favor el nombre del profesor"
