--- a/control-projects-frontend/src/app/views/investigation-project-view/create-investigation-project-view/create-investigation-project-view.component.html
+++ b/control-projects-frontend/src/app/views/investigation-project-view/create-investigation-project-view/create-investigation-project-view.component.html
@@ -1,6 +1,9 @@
 <window-template [title]="title" [showActions]="true" [validateForm]="true">
     <div class="create-catalog" content>
         <div>
+            <input-text-form label="Codigo del proyecto de investigación: "
+                hint="Ingresa por favor el codigo del profesor" [isRequired]="true" type="number"></input-text-form>
+
             <input-text-form label="Nombre del grupo de investigación: " hint="Ingresa por favor el nombre del profesor"
                 [isRequired]="true"></input-text-form>
 
@@ -9,16 +12,20 @@
                 [isRequired]="true">
             </custom-dropdown>
 
-
-            <custom-dropdown methodGetData="findAllSedes" label="Area de interes del grupo de investigación: "
-                hint="Ingrese el area de interes" placeholder="Area de interes" [isRequired]="true">
+            <custom-dropdown label="Seleccione el grupo de investigacion" hint="Seleccione el grupo de investigacion"
+                placeholder="grupo Investigacion" [isRequired]="true">
             </custom-dropdown>
 
-            <div class="p-field p-col-12 p-md-4">
-                <label for="range">Duracion del proyecto de investigacion </label>
-                <p-calendar [(ngModel)]="rangeDates" selectionMode="range" [readonlyInput]="false" inputId="range" [disabledDays]="[0,6]">
-                </p-calendar>
-            </div>
+                <custom-dropdown methodGetData="findAllSedes" label="Area de interes del grupo de investigación: "
+                    hint="Ingrese el area de interes" placeholder="Area de interes" [isRequired]="true">
+                </custom-dropdown>
+
+                <div class="p-field p-col-12 p-md-4">
+                    <label for="range">Duracion del proyecto de investigacion </label>
+                    <p-calendar [(ngModel)]="rangeDates" selectionMode="range" [readonlyInput]="false" inputId="range"
+                        [disabledDays]="[0,6]">
+                    </p-calendar>
+                </div>
         </div>
     </div>
 </window-template>
