--- a/control-projects-frontend/src/app/views/professor-view/create-professor-view/create-professor-view.component.html
+++ b/control-projects-frontend/src/app/views/professor-view/create-professor-view/create-professor-view.component.html
@@ -7,14 +7,15 @@
     <div>
       <input-text-form
         label="Nombre del profesor:"
-        hint="Ingresa por favor el nombre del profesor"
+        hint="Ingrese por favor el nombre del profesor."
         [isRequired]="true"
       ></input-text-form>
 
       <input-text-form
-        label="Nombre del profesor:"
-        hint="Ingresa por favor el nombre del profesor"
+        label="Cedula del profesor:"
+        hint="Ingrese por favor la cedula del profesor."
         [isRequired]="true"
+        type="number"
       ></input-text-form>
 
     </div>
